--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -62,7 +62,5 @@
   .main-nav {
     flex-direction: column;
     gap: 2rem;
-    margin-top: 6rem;
-    margin-bottom: 4rem;
   }
 }
